data-export-fixes-and-enhancement
Changelog:
- Enable and add USE_SAS_URLS to address 403 azure blob download errors.
- Enhance the data export procedure so that it is more robust against
intermittent download issues.
- Fix DOI filter using wrong json args (human readable instead of raw
filter values) resulting in DOI not resolving properly.
- update github workflow so that final build on runs when merge is
created instead of during PR.
- Add openapi docs since it was already added previously.
